k8s-apps-deployment/marker-mpbigbang2/marker-mpbigbang-apache2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marker-mpbigbang-apache2
  namespace: marker-mpbigbang2
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: marker-mpbigbang-apache2
  template:
    metadata:
      labels:
        app: marker-mpbigbang-apache2
    spec:
      volumes:
      - name: mpbigbang
        persistentVolumeClaim:
         claimName: mpbigbang
      - name: apache-conf
        configMap:
          name: httpd-conf
          items:
          - key: httpd.conf
            path: httpd.conf
      - name: sparse-checkout
        configMap:
          name: sparse-checkout
          items:
          - key: sparse-checkout
            path: sparse-checkout
      - name: mpbigbang2-markerapp
        persistentVolumeClaim:
          claimName: mpbigbang2-markerapp   
      containers:
      - image: docker-registry.cratis.cc/cratis/marker-mpbigbang2-apache
        name: marker-mpbigbang-apache
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 500m
        volumeMounts:
        - name: mpbigbang
          mountPath: /usr/local/apache2/htdocs
        - name: apache-conf
          mountPath: /usr/local/apache2/conf/httpd.conf
          subPath: httpd.conf
        - name: sparse-checkout
          mountPath: /usr/local/apache2/sparse-checkout
          subPath: sparse-checkout
        - name: mpbigbang2-markerapp
          mountPath: /usr/local/apache2/htdocs/marker/_marker_app
      imagePullSecrets:
      - name: regcred
