k8s-apps-deployment/marker-mpbigbang2/marker-mpbigbang-apache2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: marker-mpbigbang-apache2
  namespace: marker-mpbigbang2
  labels:
    app: marker-mpbigbang-apache2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: marker-mpbigbang-apache2
